--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -11,17 +11,13 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="710.0" prefWidth="1271.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleController">
    <children>
-      <TreeView layoutX="624.0" layoutY="613.0" prefHeight="89.0" prefWidth="200.0" />
-      <TreeView layoutX="418.0" layoutY="612.0" prefHeight="89.0" prefWidth="200.0" />
-      <TreeView layoutX="599.0" prefHeight="230.0" prefWidth="672.0" />
+      <TreeView layoutX="223.0" layoutY="612.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="14.0" layoutY="612.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="641.0" layoutY="612.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="432.0" layoutY="612.0" prefHeight="89.0" prefWidth="200.0" />
+      <TreeView layoutX="399.0" prefHeight="230.0" prefWidth="872.0" />
       <TreeView prefHeight="230.0" prefWidth="400.0" />
-      <TreeView layoutX="399.0" layoutY="115.0" prefHeight="115.0" prefWidth="200.0" />
-      <TreeView layoutX="399.0" prefHeight="115.0" prefWidth="200.0" />
-      <TextField fx:id="txtFieldUniversoStart" layoutX="413.0" layoutY="161.0" prefHeight="25.0" prefWidth="52.0" />
-      <TextField fx:id="txtFieldUniversoEnd" layoutX="534.0" layoutY="161.0" prefHeight="25.0" prefWidth="52.0" />
       <Label layoutX="18.0" layoutY="50.0" text="Nome" />
-      <Label layoutX="425.0" layoutY="143.0" text="Inicio" />
-      <Label layoutX="548.0" layoutY="143.0" prefHeight="17.0" prefWidth="21.0" text="Fim" />
       <CheckBox fx:id="chckBoxVariavelObjetiva" layoutX="51.0" layoutY="104.0" mnemonicParsing="false" onMouseClicked="#desabilitarValorVariavel" text="Objetiva" />
       <Button fx:id="btnInserirVariavel" layoutX="7.0" layoutY="190.0" mnemonicParsing="false" onAction="#inserirVariavel" text="Inserir" />
       <TextField fx:id="txtFieldTermoNucleoInicio" layoutX="233.0" layoutY="103.0" prefHeight="25.0" prefWidth="52.0" />
@@ -39,19 +35,18 @@
       <Button fx:id="btnExcluirVariavel" layoutX="119.0" layoutY="190.0" mnemonicParsing="false" onAction="#excluirVariavel" text="Excluir" />
       <Button fx:id="btnEditarTermo" layoutX="275.0" layoutY="190.0" mnemonicParsing="false" onAction="#editarTermo" text="Editar" />
       <Button fx:id="btnExcluirTermo" layoutX="333.0" layoutY="190.0" mnemonicParsing="false" onAction="#exlcuirTermo" text="Excluir" />
-      <TextArea fx:id="areaRegras" layoutX="606.0" layoutY="42.0" prefHeight="148.0" prefWidth="658.0" />
+      <TextArea fx:id="areaRegras" layoutX="409.0" layoutY="42.0" prefHeight="148.0" prefWidth="855.0" />
       <TreeView fx:id="tableVariavels" layoutX="9.0" layoutY="241.0" onMouseReleased="#editingTree" prefHeight="364.0" prefWidth="1254.0" />
       <TextField fx:id="txtFieldUniversoNome" layoutX="56.0" layoutY="46.0" prefHeight="25.0" prefWidth="114.0" />
-      <Label layoutX="805.0" layoutY="11.0" prefHeight="25.0" prefWidth="42.0" text="Regras">
+      <Label layoutX="738.0" layoutY="11.0" prefHeight="25.0" prefWidth="42.0" text="Regras">
          <font>
             <Font size="14.0" />
          </font></Label>
       <TextField fx:id="txtFieldUniversoValue" layoutX="50.0" layoutY="152.0" prefHeight="25.0" prefWidth="114.0" />
       <Label layoutX="14.0" layoutY="156.0" prefHeight="17.0" prefWidth="36.0" text="Valor:" />
-      <Button fx:id="btnPadrao" layoutX="689.0" layoutY="658.0" mnemonicParsing="false" onAction="#preenchePadrao" text="Preencher" />
-      <Button fx:id="btnAplicarRegras" layoutX="859.0" layoutY="196.0" mnemonicParsing="false" onAction="#capturaRegras" text="Aplicar" />
-      <Button fx:id="btnSetaUniverso" layoutX="473.0" layoutY="196.0" mnemonicParsing="false" onAction="#setaUniverso" text="Definir" />
-      <TitledPane animated="false" expanded="false" layoutX="857.0" layoutY="12.0" prefHeight="74.0" prefWidth="406.0" text="Regras">
+      <Button fx:id="btnPadrao" layoutX="706.0" layoutY="656.0" mnemonicParsing="false" onAction="#preenchePadrao" text="Preencher" />
+      <Button fx:id="btnAplicarRegras" layoutX="745.0" layoutY="196.0" mnemonicParsing="false" onAction="#capturaRegras" prefHeight="25.0" prefWidth="79.0" text="Aplicar" />
+      <TitledPane animated="false" expanded="false" layoutX="797.0" layoutY="12.0" prefHeight="74.0" prefWidth="466.0" text="Regras">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -68,11 +63,13 @@
             </AnchorPane>
         </content>
       </TitledPane>
-      <TextField fx:id="txtFieldDeFuzzy" editable="false" layoutX="461.0" layoutY="658.0" prefHeight="25.0" prefWidth="114.0" />
-      <Label layoutX="415.0" layoutY="45.0" text="Variável: " />
-      <TextField fx:id="txtFieldVariavelSelecionada" editable="false" layoutX="463.0" layoutY="41.0" prefHeight="25.0" prefWidth="114.0" />
-      <TextField fx:id="txtFieldTermoSelecionado" editable="false" layoutX="462.0" layoutY="78.0" prefHeight="25.0" prefWidth="114.0" />
-      <Label layoutX="419.0" layoutY="82.0" prefHeight="17.0" prefWidth="42.0" text="Termo: " />
+      <TextField fx:id="txtFieldDeFuzzy" editable="false" layoutX="475.0" layoutY="656.0" prefHeight="25.0" prefWidth="114.0" />
+      <Label layoutX="53.0" layoutY="627.0" text="Variável Selecionada">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <TextField fx:id="txtFieldVariavelSelecionada" editable="false" layoutX="59.0" layoutY="656.0" prefHeight="25.0" prefWidth="114.0" />
+      <TextField fx:id="txtFieldTermoSelecionado" editable="false" layoutX="259.0" layoutY="656.0" prefHeight="25.0" prefWidth="114.0" />
       <Label layoutX="60.0" layoutY="21.0" text="Variaveis">
          <font>
             <Font size="14.0" />
@@ -87,24 +84,19 @@
       <Label layoutX="269.0" layoutY="131.0" text="Suporte" />
       <Label layoutX="51.0" layoutY="82.0" prefHeight="17.0" prefWidth="66.0" text="É Objetiva?" />
       <Label layoutX="49.0" layoutY="131.0" text="Contém Valor?" />
-      <Label layoutX="427.0" layoutY="11.0" text="Selecionados da árvore">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="472.0" layoutY="121.0" text="Universo">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
       <Separator layoutX="175.0" orientation="VERTICAL" prefHeight="230.0" prefWidth="21.0" />
-      <Separator layoutX="621.0" layoutY="18.0" prefHeight="11.0" prefWidth="173.0" />
-      <Label layoutX="487.0" layoutY="619.0" text="Resultado">
+      <Separator layoutX="409.0" layoutY="18.0" prefHeight="11.0" prefWidth="313.0" />
+      <Label layoutX="501.0" layoutY="627.0" text="Resultado">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="674.0" layoutY="619.0" text="Exemplo Padrao">
+      <Label layoutX="688.0" layoutY="627.0" text="Exemplo Padrao">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="264.0" layoutY="627.0" text="Termo Selecionada">
          <font>
             <Font size="14.0" />
          </font>
